objects/ccrz__E_ProductIndex__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</description>
        <inlineHelpText>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CategoryEndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last day that the category is available on the storefront.</description>
        <label>Category End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__CategoryStartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first day that the category is available on the storefront.</description>
        <label>Category Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <description>The category that the product is assigned to.</description>
        <externalId>true</externalId>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterData__c</fullName>
        <description>The product spec key and spec values.</description>
        <inlineHelpText>The product spec key and spec values.</inlineHelpText>
        <label>Filter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexCurrency__c</fullName>
        <description>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</description>
        <inlineHelpText>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</inlineHelpText>
        <label>Index Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexPrice__c</fullName>
        <description>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</description>
        <externalId>true</externalId>
        <inlineHelpText>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</inlineHelpText>
        <label>Index Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexType__c</fullName>
        <description>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded). Necessary for unique filtering on SOSL searches.</description>
        <inlineHelpText>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded)</inlineHelpText>
        <label>Index Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LastIndex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only used for tracking purposes during batch job creation.</description>
        <inlineHelpText>This field is only used for tracking purposes during batch job creation.</inlineHelpText>
        <label>Last Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescription__c</fullName>
        <description>The product long description. By default, the index uses the LongDescRT__c field on the CC Product object. If the LongDescRT__c field is empty, then the index will use the LongDesc__c field instead.</description>
        <inlineHelpText>The product long description. By default, the index uses the LongDescRT__c field on the CC Product object. If the LongDescRT__c field is empty, then the index will use the LongDesc__c field instead.</inlineHelpText>
        <label>Long Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceLists__c</fullName>
        <description>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</description>
        <inlineHelpText>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</inlineHelpText>
        <label>Price Lists</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategoryEndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last day that the product&apos;s category assignment is active on the storefront.</description>
        <label>Product Category End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategorySequence__c</fullName>
        <description>A number that specifies where the product should sort in the category in comparison to other products assigned to the same category. The lower the value, the more prominent the product.</description>
        <externalId>true</externalId>
        <label>Product Category Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategoryStartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first day that the product&apos;s category assignment is active on the storefront.</description>
        <label>Product Category Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ccrz__E_ProductCategory__c</referenceTo>
        <relationshipLabel>CC Product Indices</relationshipLabel>
        <relationshipName>ProductIndices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductEndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last day that the product is available on the storefront.</description>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductName__c</fullName>
        <description>The localized Product Name. Used for sort order and performing SOSL search against a product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The localized Product Name. Used for sort order and performing SOSL search against a product.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductStartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first day that the product is available on the storefront.</description>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductStatus__c</fullName>
        <description>Availability of the product on the storefront. In Creation: The product isn&apos;t visible on the storefront because details aren&apos;t complete. Blocked: The product isn&apos;t visible on the storefront. Not Orderable: The product is visible on the storefront but can&apos;t be added to a cart. Released: The product is visible on the storefront and can be added to a cart.</description>
        <externalId>true</externalId>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which this Index applies.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Product Indices</relationshipLabel>
        <relationshipName>CCProductIndices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOKeywords__c</fullName>
        <description>The text used within meta tags on the product detail page to help drive search engine optimization.</description>
        <inlineHelpText>The text used within meta tags on the product detail page to help drive search engine optimization.</inlineHelpText>
        <label>SEO Keywords</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescription__c</fullName>
        <description>The localized Product Short Description. Used for performing SOSL search against a product.</description>
        <inlineHelpText>The localized Product Short Description. Used for performing SOSL search against a product.</inlineHelpText>
        <label>Short Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront where the product is available.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Product Index</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__ProductName__c</columns>
        <columns>ccrz__IndexPrice__c</columns>
        <columns>ccrz__SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{000000000}</displayFormat>
        <label>CC Product Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Indices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>